@@ -3,10 +3,13 @@
 const semver = require('semver')
 const { getDBDestination } = require('../context')
 
+// Match expected `<hostname>:<port>`.
+const HOSTNAME_PORT_RE = /^([^:]+):(\d+)$/
+
 module.exports = (mongodb, agent, { version, enabled }) => {
   if (!enabled) return mongodb
   if (!semver.satisfies(version, '>=3.3')) {
-    agent.logger.debug('mongodb version %s not supported - aborting...', version)
+    agent.logger.debug('mongodb version %s not instrumented (mongodb <3.3 is instrumented via mongodb-core)', version)
     return mongodb
   }
 
@@ -20,6 +23,18 @@ module.exports = (mongodb, agent, { version, enabled }) => {
   return mongodb
 
   function onStart (event) {
+    // `event` is a `CommandStartedEvent`
+    // https://github.com/mongodb/specifications/blob/master/source/command-monitoring/command-monitoring.rst#api
+    // E.g. with mongodb@3.6.3:
+    //   CommandStartedEvent {
+    //     address: '127.0.0.1:27017',
+    //     connectionId: 1,
+    //     requestId: 1,
+    //     databaseName: 'test',
+    //     commandName: 'insert',
+    //     command:
+    //     { ... } }
+
     const name = [
       event.databaseName,
       collectionFor(event),
@@ -30,38 +45,18 @@ module.exports = (mongodb, agent, { version, enabled }) => {
     if (span) {
       activeSpans.set(event.requestId, span)
 
-      console.log('XXX event', event)
-
-      // XXX
-      // This event looks like this with mongodb@3.6.3:
-      //   CommandStartedEvent {
-      //     address: '127.0.0.1:27017',
-      //     connectionId: 1,
-      //     requestId: 1,
-      //     databaseName: 'test',
-      //     commandName: 'insert',
-      //     command:
-      //     { insert: 'cats',
-      //       documents: [ [Object] ],
-      //       ordered: true,
-      //       lsid: { id: [Binary] },
-      //       '$db': 'test' } }
-      // However, I'm not sure how reliable the presence of that `address`
-      // field is. It is here in the current code:
-      //    https://github.com/mongodb/node-mongodb-native/blob/3.6/lib/core/connection/apm.js#L166
-      // but is only indirectly in a test, and not listed in this "spec":
-      //    https://github.com/mongodb/specifications/blob/master/source/command-monitoring/command-monitoring.rst#api
-      // It looks to me, from that apm.js file, like in some versions or
-      // configurations this "<hostname>:<port>" will be the `connectionId` field.
-      // TODO: grok when that is the case
+      // Per the following code it looks like "<hostname>:<port>" should be
+      // available via the `address` or `connectionId` field.
+      // https://github.com/mongodb/node-mongodb-native/blob/dd356f0ede/lib/core/connection/apm.js#L155-L169
       const address = event.address || event.connectionId
-      if (address && typeof (address) === 'string') {
-        // XXX Is this reliably "<hostname>:<port>"?
-        const { hostname, port } = address.split(/:/)
+      let match
+      if (address && typeof (address) === 'string' &&
+          (match = HOSTNAME_PORT_RE.exec(address))) {
         span.setDestinationContext(
-          getDBDestination(span, hostname, port))
+          getDBDestination(span, match[1], match[2]))
+      } else {
+        agent.logger.trace('could not set destination context on mongodb span from address=%j', address)
       }
-      // XXX else log can't get it?
     }
   }
 
